--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/handle": "^6.6.17",
     "@react-three/xr": "^6.6.17",
-    "three": "^0.176.0",
     "lucide-react": "^0.511.0",
     "lz-string": "^1.5.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "zod": "^3.24.4"
   },
   "overrides": {
